# LaMa_bytecode_interpreter

./: .gitmodules  CMakeLists.txt  benchmark.sh  lvm.c  run-tests.sh  test_benchmark.sh  test_interpretation.sh
performance/: Sort.lama
runtime/: gc_runtime.s  runtime.c  runtime.h
tools/: bytecode_defs.h  decode.c  decode.h  idiom.c  idiom.h  opcode_names.c  opcode_names.h  verifier.c  verifier.h
